test/scc/expr/semantic-errors/125.t
void test()
{
    struct A { int a; };
    struct B { char c; } b;
    struct { struct A a; } c = { b };
}